# timetraveler

./: .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  alembic.ini  keys.py  measure.py  places.py  procfile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  route.py  route_cron.py  route_metrics_calculator.py  route_preprocessor.py  route_processor.py  route_reporter.py  route_scheduler.py  routes.json  routes_enriched.json  setup.py  test.py  test_processor.py  timetraveler_backup.sql  wsgi.py
app/: __init__.py  routes.py
app/templates/: index.html
core/config/: settings.py
core/journey/: calculator.py  processor.py  reporter.py  scheduler.py
data/processed/: journeys_enriched.json
data/raw/: journeys.json
database/: session.py
database/migrations/: env.py
database/migrations/versions/: 0a20d1ceb189_database_tables_add_tables.py  19ce8a520020_modify_journey_measurement_unique_.py  80fc315ceec8_remove_unique_constraint_from_journey_.py
database/models/: __init__.py  day_of_week.py  journey.py  journey_leg.py  journey_measurement.py  journey_status.py  time_slot.py  transit_mode.py  waypoint.py
migrations/versions/: 88bdad858b50_create_initial_tables_for_timetraveler.py
scripts/: database_setup.py  journey_cron.py  journeys_measure.py  journeys_setup.py  measure.py  poetry_install.sh  setup_db.py  test_processor.py
tests/: conftest.py  test_route.py  test_route_metrics_calculator.py  test_route_preprocessor.py  test_route_processor.py
