[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timetraveler"
version = "0.1"
description = """
TimeTraveler is a route traffic analysis system designed to study and compare 
traffic patterns on specific routes over time across different modes. It captures 
and analyzes route data at 15-minute intervals, to deliver insight on traffic 
patterns across days, weeks, months and years.
"""
authors = [
    { name="Thushan Amarasiriwardena", email="timetraveler@thushan.net" }
]
dependencies = [
    "sqlalchemy",
    "googlemaps", 
    "python-dotenv",
    "psycopg2-binary",
    "pytz",
    "alembic",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "database*"]

[tool.black]
line-length = 88
target-version = ['py38']
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | env
  | venv
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_third_party = ["googlemaps", "sqlalchemy"]
skip = ["migrations", ".venv", "env"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
  ".git",
  "__pycache__",
  "env",
  "venv",
  ".venv",
  "migrations",
  "site-packages"
]

[tool.mypy]
python_version = 3.8
ignore_missing_imports = true
disallow_untyped_defs = true
strict_optional = true
exclude = 'migrations|env|venv'
