[tool.poetry]
name = "timetraveler"
version = "0.1.0"
description = "TimeTraveler is a route traffic analysis system designed to study and compare traffic patterns on specific routes over time across different modes."
authors = ["Thushan Amarasiriwardena <timetraveler@thushan.net>"]
packages = [{ include = "core" }, { include = "database" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0 || >=3.13"
sqlalchemy = "*"
googlemaps = "*"
python-dotenv = "*"
psycopg2-binary = "*"
pytz = "*"
alembic = "*"
more-itertools = "^10.6.0"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
types-pytz = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | env
  | venv
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 120
known_third_party = ["googlemaps", "sqlalchemy"]
skip = ["migrations", ".venv", "env"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503", "E501"]
exclude = [
  ".git",
  "__pycache__",
  "env",
  "venv",
  ".venv",
  "migrations",
  "**/site-packages/*"
]

[tool.mypy]
python_version = 3.8
explicit_package_bases = true
ignore_missing_imports = true
disallow_untyped_defs = true
strict_optional = true
exclude = 'migrations|env|venv'
